CIRC-966: Fix problems related to junit4 and junit5, further migrate to junit5.
The junit4 dependencies are being introduced by mod-pubsub-client.
These conflict with the junit5 vintage dependencies (the vintage provides junit4 compatibility).
Exclude the junit from being included by mod-pubsub-client.

This further revealed that there are still a lot of junit4 being used, including old dependencies such as hamcrest-junit and JUnitParams.
These can be replaced with the latest version of hamcrest and junit-jupiter-params.

Convert as many of the tests from junit4 to junit5.
This mostly changes the annotations (Such as `@Test` being included from `org.junit.jupiter.api.Test` rather than `org.junit.Test`).
This change revealed several problems in the testing process that have now been resolved.

Of particular note, `VertxWebClientOkapiHttpClientTests` remains with junit4 testing paradigm because there is no official WireMock extension in Junit5 based on preliminary investigation.
There are projects out there that provide this (such as https://github.com/JensPiegsa/wiremock-extension) but doing this is far out of scope.

These changes further revealed that some tests were not running at all but now are.
Prior to this change there were ~2274 tests run and now ~2344 tests are being run.